# virtool-migration

./: .gitignore  .releaserc  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 8af76adc9706_add_space_table_and_columns.py  90bf491700cb_upgrade_file_size_types.py
revisions/: 7emq1brv0zz6_nest_analysis_results_field.py  rev_1keyha5n6l0j_add_subtractions_field.py  rev_1p681ke9wedv_remove_ref_process_field.py  rev_6q5k8tz8uph3_add_jobs_ping_field.py  rev_7emq1brv0zz6_nest_analysis_results_field.py  rev_gr5j6jx8ap7f_remove_software_update_status_document.py  rev_i0ljixkr0wxg_use_null_for_unset_analysis_results_fields.py  rev_jhqn47cauoea_rename_cache_hash_field_to_key.py  rev_l20h8fsbbb28_create_all_database_indexes.py  rev_s607ucxpct81_add_space_field.py  rev_tlogeiyxl9uz_add_user_active_field.py  rev_ydvidjp34n4c_add_user_handle.py
revisions/__snapshots__/: rev_1keyha5n6l0j_add_subtractions_field.ambr  rev_1p681ke9wedv_remove_ref_process_field.ambr  rev_6q5k8tz8uph3_add_jobs_ping_field.ambr  rev_7emq1brv0zz6_nest_analysis_results_field.ambr  rev_i0ljixkr0wxg_use_null_for_unset_analysis_results_fields.ambr  rev_jhqn47cauoea_rename_cache_hash_field_to_key.ambr  rev_l20h8fsbbb28_create_all_database_indexes.ambr  rev_s607ucxpct81_add_space_field.ambr  rev_tlogeiyxl9uz_add_user_active_field.ambr  (+1 more)
tests/: conftest.py  test_apply.py  test_revisions.py
virtool_migration/: apply.py  cli.py  cls.py  revisions.py
(+5 files in other folders)
