[tool.poetry]
name = "virtool-migration"
version = "0.0.0"
description = "Postgres and MongoDB Migrations for Virtool"
authors = ["Ian Boyes <igboyes@gmail.com>"]
license = "MIT"
packages = [
    { include = "virtool_migration" },
]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.0"
asyncpg = "^0.25.0"
motor = "^2.4.0"
arrow = "^1.2.2"
click = "^8.1.3"
virtool-core = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
syrupy = "^2.3.0"
black = "^22.3.0"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
migration = "virtool_migration.cli:entry"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
